--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
                                 <option value="社会">社会</option>
                                 <option value="科学">科学</option>
                                 <option value="艺术">艺术</option>
+                                <option value="综合">综合</option>
                             </select>
                             <span class="error-message"></span>
                         </div>
