--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>幼师偷懒神器 - AI辅助工具</title>
+    <title>幼师智作坊 - AI教学助手</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- 顶部导航栏 -->
     <header class="header">
         <div class="container">
-            <h1 class="logo">🎨 幼师偷懒神器</h1>
+            <h1 class="logo">🎨 幼师智作坊</h1>
             <nav class="nav" id="toolNav">
                 <button class="nav-btn active" data-tool="observation">自主游戏观察表</button>
                 <button class="nav-btn" data-tool="course">月课程生成器</button>
